[gd_scene load_steps=5 format=3 uid="uid://b8fanqt6wmmmm"]

[ext_resource type="Script" path="res://scripts/CombatTestTarget.gd" id="1_wi8cj"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mon1g"]
radius = 0.4

[sub_resource type="CapsuleMesh" id="CapsuleMesh_o7ayq"]
radius = 0.4
radial_segments = 8

[sub_resource type="SphereShape3D" id="SphereShape3D_ljvnx"]
radius = 8.0

[node name="CombatTestTarget" type="CharacterBody3D" groups=["lockable_targets"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_wi8cj")
detection_range = 4.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_mon1g")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_o7ayq")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = -150.0
offset_right = 100.0
offset_bottom = -130.0

[node name="HealthBar" type="ProgressBar" parent="UI"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 27.0
value = 100.0
show_percentage = false

[node name="DamageLabel3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
billboard = 1
modulate = Color(1, 1, 1, 0)
text = "\"\""
font_size = 24

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="DetectionArea" type="Area3D" parent="."]
monitorable = false

[node name="DetectionShape" type="CollisionShape3D" parent="DetectionArea"]
shape = SubResource("SphereShape3D_ljvnx")

[node name="AttackArea" type="Area3D" parent="."]

[node name="AttackShape" type="CollisionShape3D" parent="AttackArea"]
